<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_dual"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_dual" />

    <item
        android:id="@+id/nav_ftp"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_ftp" />

    <item
        android:id="@+id/nav_tools"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/nav_tools" />

    <item
        android:id="@+id/nav_cleanup"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_cleanup" />

    <item
        android:id="@+id/nav_archive"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_archive" />

    <item
        android:id="@+id/nav_transfer"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_transfer" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_settings" />

</menu>